[package]
name = "memflow-coredump"
version = "0.2.0-beta1"
authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"
license = "MIT"
description = "win32 coredump connector for the memflow physical memory introspection framework"
homepage = "https://memflow.github.io"
repository = "https://github.com/memflow/memflow-coredump"
documentation = "https://docs.rs/memflow-coredump"
readme = "README.md"
keywords = [ "memflow", "introspection", "memory" ]
categories = [ "api-bindings", "memory-management", "os" ]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
memflow = { version = "0.2.0-beta", features = ["plugins", "filemap"] }
log = { version = "0.4.8", default-features = false }
cglue = "0.2"

[dev-dependencies]
memflow-win32 = { version = "0.1" }
clap = "2.33.0"
simple_logger = "1.0.1"

[profile.release]
lto = true

[features]
default = ["filemap"]
inventory = []
filemap = []

[[example]]
name = "read_coredump"
path = "examples/read_coredump.rs"
