[package]
name = "memflow-coredump"
version = "0.2.0-beta3"
authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"
description = "win32 coredump connector for the memflow physical memory introspection framework"
documentation = "https://docs.rs/memflow-coredump"
readme = "README.md"
homepage = "https://memflow.github.io"
repository = "https://github.com/memflow/memflow-coredump"
license = "MIT"
keywords = [ "memflow", "introspection", "memory" ]
categories = [ "api-bindings", "memory-management", "os" ]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
memflow = { version = "^0.2.0-beta", features = ["plugins", "filemap"] }
log = { version = "^0.4.14", default-features = false }

[dev-dependencies]
simplelog = "^0.11.1"
memflow-win32 = { version = "^0.2.0-beta" }

[profile.release]
lto = true

[features]
default = ["filemap"]
inventory = []
filemap = []

[[example]]
name = "read_phys"
path = "examples/read_phys.rs"

[[example]]
name = "ps_win32"
path = "examples/ps_win32.rs"

[[example]]
name = "ps_inventory"
path = "examples/ps_inventory.rs"
